# documentation

./: .gitignore  README.md  docs.json  global.js  style.css
api-reference/: bill-2.0.0.openapi.yaml  docflow.json  extract-1.0.2.openapi.yaml  extract-1.0.3.openapi.yaml  extract-form-1.0.2.openapi.yaml  extract-sync-1.0.0.openapi.yaml  medical-bill-1.0.0.openapi.yaml  medical-bill-1.0.1.openapi.yaml  medical-bill-1.2.0.openapi.yaml  open_kie_vlm_engine.json  parse-1.0.1.openapi.yml  parse-async-1.0.0.openapi.yaml  parse-async-1.3.0.openapi.yaml  parse-form-1.0.1.openapi.yml  parse-sync-1.0.0.openapi.yaml  parse-sync-1.3.0.openapi.yaml  parse-vlm-beta.json  parse-vlm-beta.openapi.yaml  pdf-to-markdown.json  pipeline-1.0.0.openapi.yaml  pipeline-beta.openapi.yaml
bill/: api-key.mdx  bill-getjson.mdx  bill-quickstart.mdx  charge.mdx  medical-bill-getjson.mdx  medical-bill-quickstart.mdx  overview.mdx  product-manual.mdx
pipeline/: api-key.mdx  charge.mdx  chunk.mdx  destinations.mdx  elements-metadata.mdx  embed.mdx  error.mdx  extract.mdx  overview.mdx  parse.mdx  quickstart.mdx  rag-tutorial.mdx  sources.mdx  traceability.mdx
pipeline/project/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
pipeline/project/doc/: openapi-pipeline.yaml
pipeline/project/example/: run_pipeline.py
pipeline/project/xparse_pipeline/: __init__.py  core.py
spec/: L4-ecosystem-docs-design.md
xparse/: api-key.mdx  charge.mdx  extract-asyncio.mdx  extract-best-practices-v3.mdx  extract-debug-apifox.mdx  extract-debug-postman.mdx  extract-getjson.mdx  extract-getpos.mdx  (+21 more)
(+84 files in other folders)
