[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xparse-pipeline"
version = "0.1.4"
description = "xParse 数据处理 Pipeline"
readme = "README.md"
license = { file = "LICENSE" }
authors = []
keywords = ["xparse", "pipeline", "rag"]
requires-python = ">=3.8"
dependencies = [
    "boto3",
    "pymilvus[milvus_lite]",
    "requests"
]

[project.urls]
Homepage = "https://gitlab.intsig.net/xparse1/xparse-pipeline"
Repository = "https://gitlab.intsig.net/xparse1/xparse-pipeline"
